--- a/moiselin_cloud_app/pubspec.yaml
+++ b/moiselin_cloud_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.20.2 
   flutter_localizations:
     sdk: flutter
+  file_picker: ^10.3.10
 
 dev_dependencies:
   flutter_test:
