Creacion de carpetas, meter recursos dentro de carpetas y eliminar recursos

--- a/moiselin_cloud_app/pubspec.yaml
+++ b/moiselin_cloud_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   file_picker: ^10.3.10
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
