--- a/moiselin_cloud_app/pubspec.yaml
+++ b/moiselin_cloud_app/pubspec.yaml
@@ -10,12 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.8.2
+  chewie: ^1.7.1
+  audioplayers: ^5.2.1
   cupertino_icons: ^1.0.8
   http: ^1.2.0
   shared_preferences: ^2.2.2
   cached_network_image: ^3.3.1
   image_picker: ^1.0.7
-  # CORRECCIÓN AQUÍ: Usamos la versión exacta que pide tu Flutter SDK
+  
   intl: ^0.20.2 
   flutter_localizations:
     sdk: flutter
