--- a/moiselin_cloud_app/pubspec.yaml
+++ b/moiselin_cloud_app/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
   intl: ^0.20.2 
+  wechat_assets_picker: ^9.0.0
+  photo_manager: ^3.0.0
   flutter_localizations:
     sdk: flutter
   file_picker: ^10.3.10
