--- a/moiselin_cloud_app/pubspec.yaml
+++ b/moiselin_cloud_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   file_picker: ^10.3.10
   flutter_secure_storage: ^10.0.0
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
